Staff Scramble Release V1.0

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/staff-scramble/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/staff-scramble/tandem.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Staff Scramble | The Key Person Risk & Bus Factor Game</title>
     <meta name="description" content="Play Staff Scramble to see if your organization can survive the 'Bus Factor.'">
@@ -28,6 +28,13 @@
         "url": "https://www.workintandem.io"
         }
       }
+    </script>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "v1fjt5d7n7");
     </script>
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://paul-tandem.github.io/staff-scramble/">
@@ -173,19 +180,19 @@
                   </div>
                   <div class="hazard-bottom-message-wrap">
                     <p class="hazard-bottom-message">People don't always stick around — but custom systems do. Learn how to turn your team’s unique expertise into a permanent asset with our <span>Knowledge-to-Systems Playbook.</span></p>
-                    <a href="#download-section" class="download-resource-btn"><img src="data:image/svg+xml,%3csvg%20width='14'%20height='18'%20viewBox='0%200%2014%2018'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M2.29167%2017.6667C1.66667%2017.6667%201.12847%2017.4549%200.677083%2017.0313C0.225694%2016.6076%200%2016.0833%200%2015.4583V3.83333C0%203.30556%200.163194%202.83333%200.489583%202.41667C0.815972%202%201.24306%201.73611%201.77083%201.625L10%200V13.3333L2.10417%2014.9167C1.97917%2014.9444%201.875%2015.0104%201.79167%2015.1146C1.70833%2015.2188%201.66667%2015.3333%201.66667%2015.4583C1.66667%2015.6111%201.72917%2015.7396%201.85417%2015.8438C1.97917%2015.9479%202.125%2016%202.29167%2016H11.6667V2.66667H13.3333V17.6667H2.29167ZM4.16667%2012.8125L8.33333%2012V2.04167L4.16667%202.85417V12.8125ZM2.5%2013.1458V3.1875L2.1875%203.25C2.03472%203.27778%201.90972%203.34375%201.8125%203.44792C1.71528%203.55208%201.66667%203.68056%201.66667%203.83333V13.3542C1.73611%2013.3264%201.80903%2013.3021%201.88542%2013.2813C1.96181%2013.2604%202.03472%2013.2431%202.10417%2013.2292L2.5%2013.1458Z'%20fill='black'/%3e%3c/svg%3e" alt="" class="btn-icon">Download the Guide</a>
+                    <a href="#download-section" class="download-resource-btn"><img src="/dist/book.svg" alt="" class="btn-icon">Download the Guide</a>
                   </div>
                 </div>
                 <div class="game-over-buttons">
-                  <button id="restart-btn" class="restart-btn"><img src="data:image/svg+xml,%3csvg%20width='15'%20height='18'%20viewBox='0%200%2015%2018'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M7.5%2017.5C6.45833%2017.5%205.48264%2017.3021%204.57292%2016.9062C3.66319%2016.5104%202.87153%2015.9757%202.19792%2015.3021C1.52431%2014.6285%200.989583%2013.8368%200.59375%2012.9271C0.197917%2012.0174%200%2011.0417%200%2010H1.66667C1.66667%2011.625%202.23264%2013.0035%203.36458%2014.1354C4.49653%2015.2674%205.875%2015.8333%207.5%2015.8333C9.125%2015.8333%2010.5035%2015.2674%2011.6354%2014.1354C12.7674%2013.0035%2013.3333%2011.625%2013.3333%2010C13.3333%208.375%2012.7674%206.99653%2011.6354%205.86458C10.5035%204.73264%209.125%204.16667%207.5%204.16667H7.375L8.66667%205.45833L7.5%206.66667L4.16667%203.33333L7.5%200L8.66667%201.20833L7.375%202.5H7.5C8.54167%202.5%209.51736%202.69792%2010.4271%203.09375C11.3368%203.48958%2012.1285%204.02431%2012.8021%204.69792C13.4757%205.37153%2014.0104%206.16319%2014.4062%207.07292C14.8021%207.98264%2015%208.95833%2015%2010C15%2011.0417%2014.8021%2012.0174%2014.4062%2012.9271C14.0104%2013.8368%2013.4757%2014.6285%2012.8021%2015.3021C12.1285%2015.9757%2011.3368%2016.5104%2010.4271%2016.9062C9.51736%2017.3021%208.54167%2017.5%207.5%2017.5Z'%20fill='white'/%3e%3c/svg%3e" alt="" class="btn-icon">Play Again</button>
-                  <a href="#save-score-section" class="save-high-score-btn"><img src="data:image/svg+xml,%3csvg%20width='17'%20height='16'%20viewBox='0%200%2017%2016'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M3.1875%2015.8333L4.54167%209.97917L0%206.04167L6%205.52083L8.33333%200L10.6667%205.52083L16.6667%206.04167L12.125%209.97917L13.4792%2015.8333L8.33333%2012.7292L3.1875%2015.8333Z'%20fill='white'/%3e%3c/svg%3e" alt="" class="btn-icon">Save your High Score</a>
+                  <button id="restart-btn" class="restart-btn"><img src="/dist/replay.svg" alt="" class="btn-icon">Play Again</button>
+                  <a href="#save-score-section" class="save-high-score-btn"><img src="/dist/star.svg" alt="" class="btn-icon">Save your High Score</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
         <div id="save-score-section" class="save-score-container">
-          <img src="data:image/svg+xml,%3csvg%20width='30'%20height='27'%20viewBox='0%200%2030%2027'%20fill='none'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M4.5%2027V24H25.5V27H4.5ZM4.5%2021.75L2.5875%209.7125C2.5375%209.7125%202.48125%209.71875%202.41875%209.73125C2.35625%209.74375%202.3%209.75%202.25%209.75C1.625%209.75%201.09375%209.53125%200.65625%209.09375C0.21875%208.65625%200%208.125%200%207.5C0%206.875%200.21875%206.34375%200.65625%205.90625C1.09375%205.46875%201.625%205.25%202.25%205.25C2.875%205.25%203.40625%205.46875%203.84375%205.90625C4.28125%206.34375%204.5%206.875%204.5%207.5C4.5%207.675%204.48125%207.8375%204.44375%207.9875C4.40625%208.1375%204.3625%208.275%204.3125%208.4L9%2010.5L13.6875%204.0875C13.4125%203.8875%2013.1875%203.625%2013.0125%203.3C12.8375%202.975%2012.75%202.625%2012.75%202.25C12.75%201.625%2012.9688%201.09375%2013.4062%200.65625C13.8438%200.21875%2014.375%200%2015%200C15.625%200%2016.1562%200.21875%2016.5938%200.65625C17.0312%201.09375%2017.25%201.625%2017.25%202.25C17.25%202.625%2017.1625%202.975%2016.9875%203.3C16.8125%203.625%2016.5875%203.8875%2016.3125%204.0875L21%2010.5L25.6875%208.4C25.6375%208.275%2025.5938%208.1375%2025.5563%207.9875C25.5188%207.8375%2025.5%207.675%2025.5%207.5C25.5%206.875%2025.7188%206.34375%2026.1562%205.90625C26.5938%205.46875%2027.125%205.25%2027.75%205.25C28.375%205.25%2028.9062%205.46875%2029.3438%205.90625C29.7812%206.34375%2030%206.875%2030%207.5C30%208.125%2029.7812%208.65625%2029.3438%209.09375C28.9062%209.53125%2028.375%209.75%2027.75%209.75C27.7%209.75%2027.6438%209.74375%2027.5813%209.73125C27.5188%209.71875%2027.4625%209.7125%2027.4125%209.7125L25.5%2021.75H4.5ZM7.05%2018.75H22.95L23.925%2012.4875L19.9875%2014.2125L15%207.35L10.0125%2014.2125L6.075%2012.4875L7.05%2018.75Z'%20fill='%23FFC788'/%3e%3c/svg%3e" alt="Crown">
+          <img src="/dist/crown.svg" alt="Crown">
           <h2 id="save-score-heading">Save Your Score to the Leaderboard</h2>
           <div class="save-score-form">
             <div class="save-score-input-wrap">
